# gb-emulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  README.md  RESOURCES.md  TODO.md  asset-manifest.json  docker-compose.yml  index.html  mem_out.txt  package.json  scratch.c  todo
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: pr.yml  push.yml
.github/workflows/: pr.yml  push.yml
e2e/: CMakeLists.txt  run.c
emulator/: .dockerignore  .gitignore  CMakeLists.txt  README.md
emulator/e2e/: CMakeLists.txt  README.md  run.c
emulator/gb-lib/: CMakeLists.txt  bit_utils.h  cpu.c  cpu.h  emu.c  emu.h  opcodes.c  ppu.c  register.c  register.h  rom.c  rom.h
emulator/src/: CMakeLists.txt  run.c
emulator/test/: CMakeLists.txt  alu_op_tests.c  bit_op_tests.c  register_tests.c  rotation_op_tests.c  runner.c  stack_tests.c
gb-lib/: CMakeLists.txt  cb_opcodes.c  cpu.c  cpu.h  emu.c  emu.h  main.c  mmu.c  mmu.h  opcodes.c  ppu.c  ppu.h  register.c  register.h  rom.c  rom.h
scripts/: build-emu-tests.sh  build-emulator.sh  prod-build.sh  test-build.sh
src/: CMakeLists.txt  README.md  cb_opcodes.c  core.rs  cpu.c  cpu.h  emu.h  lcd.h  lib.rs  main.rs  mmu.c  mmu.h  opcodes.c  register.c  register.h  rom.c  rom.h
src/app/: Cargo.toml
src/app/src/: file_saver.rs  joypad_manager.rs  lib.rs  main.rs  save_state.rs  window_buffer.rs
src/core/: cartridge.rs  cpu.rs  data.rs  mmu.rs  registers.rs  rom.rs
src/core/cartridge/: header.rs  mbc1.rs  no_mbc.rs
src/core/cpu/: alu_operations.rs  bitwise_operations.rs  cb_instructions.rs  interrupts.rs  jp_operations.rs  shift_operations.rs  stack_operations.rs
src/core/data/: interrupts.rs
src/core/mmu/: interrupts.rs  joypad.rs  ppu.rs  timer.rs
src/core/mmu/ppu/: background_map.rs  background_palette.rs  background_viewport.rs  lcd_control.rs  lcdc_status.rs  oam.rs  renderer.rs  rendering.rs  sprite_palette.rs  sprite_tile.rs  tile.rs  tiledata.rs  window_position.rs
src/cpu/: README.md  mmu.c  mmu.h  registers.h
src/emulator_core/: Cargo.toml
src/emulator_core/src/: cartridge.rs  cpu.rs  lib.rs  mmu.rs  registers.rs
src/emulator_core/src/cartridge/: header.rs  mbc1.rs  mbc3.rs  rtc.rs
src/emulator_core/src/cpu/: alu_operations.rs  bitwise_operations.rs  interrupts.rs  jp_operations.rs  shift_operations.rs  stack_operations.rs
src/emulator_core/src/mmu/: interrupts.rs  joypad.rs  ppu.rs  timer.rs
src/emulator_core/src/mmu/ppu/: background_map.rs  background_tile.rs  background_viewport.rs  lcd_control.rs  lcdc_status.rs  oam.rs  pixel.rs  renderer.rs  rendering.rs  tiledata.rs  window_position.rs
static/css/: main.18007b85.css  main.18007b85.css.map
static/js/: main.115cff7e.js  main.115cff7e.js.map  main.714953bf.js  main.714953bf.js.map  main.8a480861.js  main.8a480861.js.map  main.da8a14a0.js  main.da8a14a0.js.map
test/: CMakeLists.txt  TODO.md  alu_op_tests.c  alu_tests.c  bit_op_tests.c  cpu_tests.c  mmu_test.c  mmu_tests.c  register_tests.c  runner.c
tests/: Cargo.toml  cpu_instrs.rs  support.rs
tests/src/: acceptance_tests.rs  lib.rs  support.rs
ui/: .gitignore  README.md  package.json  tsconfig.json
ui/public/: emulator.wasm  index.html
ui/src/: app.tsx  index.tsx  theme.ts
ui/src/assets/: emulator.wasm
ui/src/components/: EmulatorContext.tsx  app.tsx  global-style.ts
ui/src/components/debugger/: instruction-list.tsx  next-instruction.tsx  register-display.tsx
ui/src/components/generic/: button.tsx  card.tsx  container.tsx  h6.tsx
ui/src/emulator/: Emulator.tsx  emulator-manager.ts  emulator.js  hi.js  registers.ts  types.ts
ui/src/hooks/: useDebugger.ts  useEmulator.ts  useInitializeEmulator.ts  useInterval.ts  useTimeout.ts
ui/src/routes/debugger/: index.tsx
ui/src/routes/home/: index.tsx
ui/src/routes/notfound/: index.tsx
ui/src/static/: emulator.wasm
ui/src/utils/: assert.ts  getBit.ts  types.ts
